--- a/judo_profiles/templates/abstract/base.html
+++ b/judo_profiles/templates/abstract/base.html
@@ -131,7 +131,7 @@
                     <span class="mx-1"> • </span>
                     <a class="link-underline link-underline-opacity-0" href="{% url "privacy" %}">{% translate "Privacy" %}</a>
                     <span class="mx-1"> • </span>
-                    <a class="link-underline link-underline-opacity-0" href="{% url "contact" %}">{% translate "Contact" %}</a>
+                    <a class="link-underline link-underline-opacity-0" href="{% url "contact" %}">{% translate "Imprint" %}</a>
                 </div>
             </footer>
         </div>
