--- a/judo_profiles/templates/abstract/base.html
+++ b/judo_profiles/templates/abstract/base.html
@@ -8,9 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% translate "Judo Profiles" %}{% endblock %}</title>
         <link rel="icon" href="{% static "favicon.svg" %}" type="text/plain">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js" integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/marked@v16.0.0/lib/marked.umd.js" integrity="sha384-EfO+Ytex7yITp4/KB3YtonW3GJl4jeOGh/edILxQwxux02CyC4u02MrrefBIQv8w" crossorigin="anonymous"></script>
         <style>
             .nav-link {
                 width: fit-content;
@@ -92,27 +94,24 @@
                                 <a class="nav-link {% block login %}{% endblock %}" href="{% url "login" %}">{% translate "Login" %}</a>
                                 <a class="nav-link {% block register %}{% endblock %}" href="{% url "register" %}">{% translate "Register with key" %}</a>
                                 {% endif %}
-                                <a class="nav-link {% block about %}{% endblock %}" href="{% url "about" %}">{% translate "About" %}</a>
-                                {% if not request.user.is_authenticated %}
-                                    <form id="language_form" action="{% url "set_language" %}" method="post" class="d-flex mx-2">
-                                        {% csrf_token %}
-                                        <select id="languages" name="language" class="form-select" style="background-color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity));">
-                                            {% get_current_language as LANGUAGE_CODE %}
-                                            {% get_available_languages as LANGUAGES %}
-                                            {% get_language_info_list for LANGUAGES as languages %}
-                                            {% for language in languages %}
-                                                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                                    {{ language.name_local }} ({{ language.code }})
-                                                </option>
-                                            {% endfor %}
-                                        </select>
-                                    </form>
-                                    <script>
-                                        document.getElementById("languages").addEventListener("change", () => {
-                                            document.getElementById("language_form").submit();
-                                        });
-                                    </script>
-                                {% endif %}
+                                <form id="language_form" action="{% url "set_language" %}" method="post" class="d-flex mx-2">
+                                    {% csrf_token %}
+                                    <select id="languages" name="language" class="form-select" style="background-color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity));">
+                                        {% get_current_language as LANGUAGE_CODE %}
+                                        {% get_available_languages as LANGUAGES %}
+                                        {% get_language_info_list for LANGUAGES as languages %}
+                                        {% for language in languages %}
+                                            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                                                {{ language.name_local }} ({{ language.code }})
+                                            </option>
+                                        {% endfor %}
+                                    </select>
+                                </form>
+                                <script>
+                                    document.getElementById("languages").addEventListener("change", () => {
+                                        document.getElementById("language_form").submit();
+                                    });
+                                </script>
                             </div>
                         </div>
                     </div>
@@ -127,11 +126,13 @@
             </div>
             <footer class="bg-body-tertiary">
                 <div class="container text-center my-2">
-                    <a class="link-underline link-underline-opacity-0" href="https://github.com/technicfan/judo_profiles" target="_blank">{% translate "Source code" %}</a>
-                    <span class="mx-1"> • </span>
                     <a class="link-underline link-underline-opacity-0" href="{% url "privacy" %}">{% translate "Privacy" %}</a>
                     <span class="mx-1"> • </span>
-                    <a class="link-underline link-underline-opacity-0" href="{% url "contact" %}">{% translate "Imprint" %}</a>
+                    <a class="link-underline link-underline-opacity-0" href="{% url "imprint" %}">{% translate "Imprint" %}</a>
+                    <span class="mx-1"> • </span>
+                    <a class="link-underline link-underline-opacity-0" href="https://github.com/technicfan/judo_profiles" target="_blank">{% translate "Source code" %}</a>
+                    <span class="mx-1"> • </span>
+                    <a class="link-underline link-underline-opacity-0" href="{% url "about" %}">{% translate "About" %}</a>
                 </div>
             </footer>
         </div>
