--- a/judo_profiles/templates/account.html
+++ b/judo_profiles/templates/account.html
@@ -6,37 +6,7 @@
 {% block update %}active" aria-current="page{% endblock %}
 
 {% block content %}
-    <div class="d-flex justify-content-center">
-        <form id="language_form" action="{% url "set_language" %}" method="post">
-            {% csrf_token %}
-            <table>
-                <tr>
-                    <td>
-                        <label for="#languages" class="d-inline me-3">{% translate "Select language" %}:</label>
-                    </td>
-                    <td>
-                        <select id="languages" name="language" class="form-select">
-                            {% get_current_language as LANGUAGE_CODE %}
-                            {% get_available_languages as LANGUAGES %}
-                            {% get_language_info_list for LANGUAGES as languages %}
-                            {% for language in languages %}
-                                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                    {{ language.name_local }} ({{ language.code }})
-                                </option>
-                            {% endfor %}
-                        </select>
-                    </td>
-                </tr>
-            </table>
-        </form>
-        <script>
-            document.getElementById("languages").addEventListener("change", () => {
-                document.getElementById("language_form").submit();
-            });
-        </script>
-    </div>
-    <hr class="mx-auto" style="width: 30rem;">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-4">
         <form id="form" method="post" style="width: 27rem;">
             {% csrf_token %}
             {% if wrong %}
