--- a/judo_profiles/templates/imprint.html
+++ b/judo_profiles/templates/imprint.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container" style="max-width: 30rem;">
         <h2 class="text-center my-5">{% translate "Imprint" %}</h2>
-        <div id="imprint">{{ imprint }}</div>
+        <div id="imprint" class="d-flex justify-content-center">{{ imprint }}</div>
     </div>
 {% endblock %}
 
