--- a/judo_profiles/templates/abstract/profile_base.html
+++ b/judo_profiles/templates/abstract/profile_base.html
@@ -4,6 +4,7 @@
 
 {% block style %}
     <link rel="stylesheet" href="{% static "style/main.css" %}">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
     {% block style2 %}{% endblock %}
 {% endblock %}
 
