--- a/judo_profiles/templates/lang/de/about.html
+++ b/judo_profiles/templates/lang/de/about.html
@@ -19,7 +19,7 @@
         <h3>Technisches</h3>
         <p>
             Es handelt sich um ein <a class="link-underline link-underline-opacity-0" href="https://github.com/django/django">Django</a>-Projekt, das auch JavaScript für das Frontend.
-            Es ist unter der <a class="link-underline link-underline-opacity-0" href="{% url "license" %}">MIT Lizenz</a> frei und kostenlos erhältlich: <a class="link-underline link-underline-opacity-0" href="https://github.com/technicfan/judo_profiles">GitHub</a><br>
+            Es ist unter der <a class="link-underline link-underline-opacity-0" href="{% url "license" %}">GPL-3.0</a> frei und kostenlos auf <a class="link-underline link-underline-opacity-0" href="https://github.com/technicfan/judo_profiles">GitHub</a> erhältlich.<br>
             Ich verwende <a class="link-underline link-underline-opacity-0" href="https://github.com/django-guardian/django-guardian">django-guardian</a> für Per-Object-Permissions für die Profile.
             Außerdem verwende auf der Client-Seite <a class="link-underline link-underline-opacity-0" href="https://github.com/twbs/bootstrap">Bootstrap</a> für einfaches Styling, ein wenig
             <a class="link-underline link-underline-opacity-0" href="https://jquery.com/">jQuery</a>, <a class="link-underline link-underline-opacity-0" href="https://github.com/markedjs/marked">marked.js</a> für Markdown Serverinformationen und <a class="link-underline link-underline-opacity-0" href="https://github.com/bigskysoftware/htmx">htmx</a> für schnelle Live-Suche ohne Neuladen.
