--- a/judo_profiles/templates/license.html
+++ b/judo_profiles/templates/license.html
@@ -661,7 +661,7 @@ Also add information on how to contact you by electronic and paper mail.<br>
   If the program does terminal interaction, make it output a short<br>
 notice like this when it starts in an interactive mode:<br>
 <br>
-    <program>  Copyright (C) <year>  <name of author><br>
+    judo_profiles Copyright (C) 2025 technicfan
     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.<br>
     This is free software, and you are welcome to redistribute it<br>
     under certain conditions; type `show c' for details.<br>
