--- a/judo_profiles/templates/register.html
+++ b/judo_profiles/templates/register.html
@@ -40,7 +40,7 @@
                     </div>
                 {% endif %}
                 <input class="form-control" type="text" name="user" placeholder="{% translate "Username" %}" aria-label="{% translate "Username" %}" required>
-                <input class="form-control my-2" type="password" name="token" placeholder="{% translate "Key" %}" aria-label="{% translate "Key" %}" required>
+                <input class="form-control my-2" type="password" name="token" placeholder="{% translate "Key" %}: XXXX-XXXX-XXXX-XXXX" aria-label="{% translate "Key" %}: XXXX-XXXX-XXXX-XXXX" required>
                 <div class="d-flex justify-content-center">
                     <input class="btn btn-secondary mt-2" type="submit" value="{% translate "Register with key" %}">
                 </div>
