--- a/judo_profiles/templates/license.html
+++ b/judo_profiles/templates/license.html
@@ -640,8 +640,7 @@ to attach them to the start of each source file to most effectively<br>
 state the exclusion of warranty; and each file should have at least<br>
 the "copyright" line and a pointer to where the full notice is found.<br>
 <br>
-    <one line to give the program's name and a brief idea of what it does.><br>
-    Copyright (C) <year>  <name of author><br>
+    Copyright (C) 2025 technicfan<br>
 <br>
     This program is free software: you can redistribute it and/or modify<br>
     it under the terms of the GNU General Public License as published by<br>
@@ -661,7 +660,7 @@ Also add information on how to contact you by electronic and paper mail.<br>
   If the program does terminal interaction, make it output a short<br>
 notice like this when it starts in an interactive mode:<br>
 <br>
-    judo_profiles Copyright (C) 2025 technicfan
+    Copyright (C) 2025 technicfan<br>
     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.<br>
     This is free software, and you are welcome to redistribute it<br>
     under certain conditions; type `show c' for details.<br>
