fix small bugs + some typos

--- a/judo_profiles/templates/lang/de/privacy.html
+++ b/judo_profiles/templates/lang/de/privacy.html
@@ -50,7 +50,7 @@
         </p>
         <h4 class="mb-3 mt-5">Umgang mit und Zugang zu Daten</h4>
         <p>
-            Standardmäßig haben nur der/die Trainer*in und der/die verbundene Nutzer*in Zugriff auf das Profil, wobei der/die Trainer*in es Zusätzlich noch bearbeiten kann.
+            Standardmäßig haben nur der/die Trainer*in und der/die verbundene Nutzer*in Zugriff auf das Profil, wobei der/die Trainer*in es zusätzlich noch bearbeiten kann.
             Beide können einstellen, welche weiteren Nutzer*innen das Profil anschauen dürfen und welche weiteren Trainer*innen es auch bearbeiten können.
             <b>Dabei sind also auch alle Benutzernamen für jede/n Benutzer*innen einsehbar.</b>
         </p>
