--- a/judo_profiles/templates/lang/de/about.html
+++ b/judo_profiles/templates/lang/de/about.html
@@ -9,7 +9,7 @@
         <h2>Einführung</h2>
         <p>
             Diese Website ist ein Schulprojekt, das immer mehr zum Hobbyprojekt wurde.
-            Es handelt sich um eine online Judo-Kämpferprofil-Verwaltung, die mehrere Trainer*innen gleichzeitug verwenden können.
+            Es handelt sich um eine online Judo-Kämpferprofil-Verwaltung, die mehrere Trainer*innen gleichzeitig verwenden können.
             Außerdem kann auch den Judoka Zugriff zu ihren und auch zu anderen Profilen gewährt werden (durch Trainer*innen).
             Auch Trainer*innen können sich gegenseitig Lese- und Schreibzugriff zu den, von ihnen erstellten Profilen geben.
             Zudem wird zu Beginn ein Admin eingerichtet (im cli), welcher alle Benutzerkonten verwalten kann und auch bei Bedarf neue Schlüssel erstellen, falls jemand das Passwort vergessen hat.
